[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Bus.tscn" type="PackedScene" id=4]
[ext_resource path="res://Truck.tscn" type="PackedScene" id=5]
[ext_resource path="res://Car1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Car2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tomato.tscn" type="PackedScene" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Bus = ExtResource( 4 )
Truck = ExtResource( 5 )
Car1 = ExtResource( 6 )
Car2 = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 500.374, 731.903 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 384 )
z_index = -1
texture = ExtResource( 2 )

[node name="BusSpawn" type="Position2D" parent="."]
position = Vector2( -174.953, 201.767 )

[node name="BusTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TruckSpawn" type="Position2D" parent="."]
position = Vector2( 1199.66, 487.438 )

[node name="TruckTimer" type="Timer" parent="."]
wait_time = 2.8

[node name="CarSpawn1" type="Position2D" parent="."]
position = Vector2( -183.439, 606.232 )

[node name="CarTimer1" type="Timer" parent="."]
wait_time = 2.0

[node name="CarSpawn2" type="Position2D" parent="."]
position = Vector2( 1213.8, 300.762 )

[node name="CarTimer2" type="Timer" parent="."]
wait_time = 1.8

[node name="Tomato" parent="." instance=ExtResource( 8 )]
position = Vector2( 1001.62, 742.444 )

[node name="Tomato2" parent="." instance=ExtResource( 8 )]
position = Vector2( 977.625, 707.944 )

[node name="Tomato3" parent="." instance=ExtResource( 8 )]
position = Vector2( 1008.12, 675.444 )

[node name="Tomato4" parent="." instance=ExtResource( 8 )]
position = Vector2( 954.625, 750.444 )

[node name="Tomato5" parent="." instance=ExtResource( 8 )]
position = Vector2( 856.134, 749.634 )

[node name="Tomato6" parent="." instance=ExtResource( 8 )]
position = Vector2( 892.269, 717.03 )

[node name="Tomato7" parent="." instance=ExtResource( 8 )]
position = Vector2( 910.968, 681.084 )

[node name="Tomato8" parent="." instance=ExtResource( 8 )]
position = Vector2( 939.069, 712.752 )

[node name="Tomato9" parent="." instance=ExtResource( 8 )]
position = Vector2( 961.61, 676.143 )

[node name="Tomato10" parent="." instance=ExtResource( 8 )]
position = Vector2( 915.328, 747.653 )

[connection signal="timeout" from="BusTimer" to="." method="_on_BusTimer_timeout"]
[connection signal="timeout" from="TruckTimer" to="." method="_on_TruckTimer_timeout"]
[connection signal="timeout" from="CarTimer1" to="." method="_on_CarTimer1_timeout"]
[connection signal="timeout" from="CarTimer2" to="." method="_on_CarTimer2_timeout"]
